2005-07-21  Martin Baulig  <martin@ximian.com>
	* backends/mono/MonoArrayTypeInfo.cs (MonoArrayTypeInfo.ctor): Use
	`4 x TargetAddressSize' to get proper alignment.


svn path=/trunk/debugger/; revision=47506

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-21  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono/MonoArrayTypeInfo.cs (MonoArrayTypeInfo.ctor): Use
+	`4 x TargetAddressSize' to get proper alignment.
+
 2005-07-19  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/x86-ptrace.c
