--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-07-22  Martin Baulig  <martin@ximian.com>
 
+	* backends/ThreadManager.cs
+	(ThreadManager.start_wait_thread): Reap all children before exiting.
+	(ThreadManager.NextProcessID): New internal property.
+	(Process.ctor): Set the process ID on a per-thread manager basis,
+	so we start counting at 1 after restarting the target.
+
+2005-07-22  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetNotification.cs
 	(ITargetNotification): Remove the `TargetExited' event.
 
