--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-07-22  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono/MonoLanguageBackend.cs
+	(MonoLanguageBackend.GetTrampoline): Implemented.
+
+2005-07-22  Martin Baulig  <martin@ximian.com>
+
 	* backends/ThreadManager.cs
 	(ThreadManager.start_wait_thread): Reap all children before exiting.
 	(ThreadManager.NextProcessID): New internal property.
