--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-23  Martin Baulig  <martin@ximian.com>
+
+	* arch/opcodes/Makefile.am (arch_cflags): Add `-DBFD64' on x86_64.
+
 2005-07-22  Martin Baulig  <martin@ximian.com>
 
 	* backends/mono/MonoLanguageBackend.cs
