--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-07-23  Martin Baulig  <martin@ximian.com>
 
+	* frontend/libedit/: Imported libedit from NetBSD 2.0.2.
+
+	* configure.in: Added `termcap.h' and `termcap/termcap.h' checks.
+
+2005-07-23  Martin Baulig  <martin@ximian.com>
+
 	* arch/opcodes/Makefile.am (arch_cflags): Add `-DBFD64' on x86_64.
 
 2005-07-22  Martin Baulig  <martin@ximian.com>
