--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-26  Martin Baulig  <martin@ximian.com>
+
+	* arch/Architecture_X86_64.cs
+	(Architecture_X86_64.GetCallTarget): Added support for the new
+	call opcodes.
+
 2005-07-23  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Main.cs (CommandLineInterpreter.ReadInput): Don't use
