--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-08-11  Martin Baulig  <martin@ximian.com>
 
+	* backends/remoting/DebuggerClient.cs
+	(DebuggerClient.CreateConnection): Register a lease sponsor and
+	always renew the lease for another 5 minutes.
+
+2005-08-11  Martin Baulig  <martin@ximian.com>
+
 	* backends/remoting/mono-debugger-remoting.[ch]: Renamed to
 	backends/server/remoting.[ch] and include it in the
 	libmonodebuggerserver.la.	
