--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2005-08-17  Martin Baulig  <martin@ximian.com>
 
+	* backends/remoting/Server.cs: Moved to ./wrapper/Server.cs.
+
+	* backends/remoting/DebuggerClient.cs: Moved to
+	./backends/DebuggerClient.cs.
+
+	* backends/Debugger.cs (DebuggerBackend): Make the .ctor
+	protected internal.
+
+	* backends/remoting/DebuggerServer.cs (DebuggerServer): Derive
+	from DebuggerBackend.
+
+	* wrapper: Merge Mono.Debugger.Remoting.dll and Mono.Debugger.dll.
+
+2005-08-17  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Interpreter.cs
 	(Interpreter.Start): Don't take any arguments; parse the
 	`InferiorArgs' in our `DebuggerOptions', start the target and
