--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-08-20  Martin Baulig  <martin@ximian.com>
+
+	* backends/Process.cs (Process.ctor): Removed the Inferior and
+	ProcessStart arguments.
+
+	* backends/SingleSteppingEngine.cs (SingleSteppingEngine.ctor):
+	Catch the inferior's TargetOutput, DebuggerOutput and
+	DebuggerError events here.
+
 2005-08-18  Martin Baulig  <martin@ximian.com>
 
 	* backends/remoting/DebuggerManager.cs
